// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SemiCircleSpin> <SemiCircleSpin> Mount: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<SemiCircleSpin
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</SemiCircleSpin>
`;

exports[`<SemiCircleSpin> <SemiCircleSpin> Render: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<SemiCircleSpin> <SemiCircleSpin> Shallow: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
